src/test/ui/associated-type-bounds/bad-bounds-on-assoc-in-trait.stderr
error[E0277]: `<<Self as Case1>::C as std::iter::Iterator>::Item` is not an iterator
  --> $DIR/bad-bounds-on-assoc-in-trait.rs:28:5
   |
LL | /     type C: Clone + Iterator<Item:
LL | |         Send + Iterator<Item:
LL | |             for<'a> Lam<&'a u8, App:
LL | |                 Debug
LL | |             >
LL | |         > + Sync>;
   | |__________________^ `<<Self as Case1>::C as std::iter::Iterator>::Item` is not an iterator
   |
   = help: the trait `std::iter::Iterator` is not implemented for `<<Self as Case1>::C as std::iter::Iterator>::Item`
help: consider further restricting the associated type
   |
LL | trait Case1 where <<Self as Case1>::C as std::iter::Iterator>::Item: std::iter::Iterator {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `<<Self as Case1>::C as std::iter::Iterator>::Item` cannot be sent between threads safely
  --> $DIR/bad-bounds-on-assoc-in-trait.rs:23:9
   |
LL |         Send + Iterator<Item:
   |         ^^^^ `<<Self as Case1>::C as std::iter::Iterator>::Item` cannot be sent between threads safely
   |
  ::: $SRC_DIR/libcore/marker.rs:LL:COL
   |
LL | pub unsafe auto trait Send {
   | -------------------------- required by this bound in `std::marker::Send`
   |
   = help: the trait `std::marker::Send` is not implemented for `<<Self as Case1>::C as std::iter::Iterator>::Item`
help: consider further restricting the associated type
   |
LL | trait Case1 where <<Self as Case1>::C as std::iter::Iterator>::Item: std::marker::Send {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `<<Self as Case1>::C as std::iter::Iterator>::Item` cannot be shared between threads safely
  --> $DIR/bad-bounds-on-assoc-in-trait.rs:27:13
   |
LL |         > + Sync>;
   |             ^^^^ `<<Self as Case1>::C as std::iter::Iterator>::Item` cannot be shared between threads safely
   |
  ::: $SRC_DIR/libcore/marker.rs:LL:COL
   |
LL | pub unsafe auto trait Sync {
   | -------------------------- required by this bound in `std::marker::Sync`
   |
   = help: the trait `std::marker::Sync` is not implemented for `<<Self as Case1>::C as std::iter::Iterator>::Item`
help: consider further restricting the associated type
   |
LL | trait Case1 where <<Self as Case1>::C as std::iter::Iterator>::Item: std::marker::Sync {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
